<resources>
    <string name="GOOGLE_API_KEY">AIzaSyCRkgwGBe8ZxjcK07Cnl3Auf72BpgA6lLo</string>
    <string name="BRANCH_SDK_KEY">key_live_abhHgIh1DQiuPxdBNg9EXepdDugwwkHr</string>
    <string name="key_moengage">LNCME8HVKUEJIGXE2N0698H0</string>
    <string name="app_id">126665634029576</string>
    <string name="app_name">Tokopedia</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_logout">Keluar</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_print">Cetak</string>
    <string name="btn_send">Kirim</string>
    <string name="title_activity_main">Memulai</string>
    <string name="title_warning">Peringatan</string>
    <string name="error_connection">Masalah Koneksi</string>
    <string name="title_retry">Coba Lagi</string>
    <string name="navigate_back">Kembali</string>
    <string name="understand">Mengerti</string>
    <string name="navigate_browser">Lanjut ke Aplikasi TopSeller</string>
    <string name="title_new_message">Pesan baru</string>
    <string name="title_share">Bagikan</string>
    <string name="title_new_talk">Diskusi Produk baru</string>
    <string name="title_new_review">Ulasan baru</string>
    <string name="title_review_edited">Ulasan diperbarui</string>
    <string name="title_new_ticket">Tiket Anda telah dibalas</string>
    <string name="title_new_rescenter">Notifikasi Pusat Resolusi</string>
    <string name="title_new_order">Pesanan baru</string>
    <string name="title_new_notif_general">Notifikasi baru dari Tokopedia</string>
    <string name="title_transaction_cancel">Transaksi Dibatalkan</string>
    <string name="title_transaction_update_resi">Perbarui Resi</string>
    <string name="title_transaction_order_delivered">Produk Terkirim</string>
    <string name="title_transaction_order_finished">Transaksi Selesai</string>
    <string name="msg_new_order">Toko Anda mendapat pesanan baru, mohon diproses</string>
    <string name="reorder">Transaksi dibatalkan</string>
    <string name="title_sales">Penjualan</string>
    <string name="title_purchase">Pembelian</string>
    <string name="title_order_list">Daftar Transaksi</string>
    <string name="title_edit_review">Ulasan yang diubah</string>
    <string name="title_reply_review">Ulasan yang dibalas</string>
    <string name="title_activity_login">Masuk</string>
    <string name="title_activity_register">Daftar</string>
    <string name="prompt_phone">Nomor Ponsel</string>
    <string name="prompt_confirm_password">Konfirmasi kata sandi</string>
    <string name="title_register">Daftar Sekarang di Tokopedia</string>
    <string name="title_register_wo_u">Daftar</string>
    <string name="title_register_process">Sedang mendaftar</string>
    <string name="action_sign_in">MASUK</string>
    <string name="title_forgot_password">Lupa kata sandi?</string>
    <string name="title_personal_id">Identitas Personal</string>
    <string name="title_login_info">Informasi Login</string>
    <string name="title_next">Selanjutnya</string>
    <string name="show_password">Tampilkan kata sandi</string>
    <string name="title_gender">Jenis Kelamin</string>
    <string name="title_birthday">Tanggal Lahir</string>
    <string name="error_password_not_same">Kata sandi tidak cocok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_or_use">atau gunakan</string>
    <string name="radio_male">Pria</string>
    <string name="radio_female">Wanita</string>
    <string name="title_confirmation">Konfirmasi</string>
    <string name="title_summary">Ringkasan</string>
    <string name="title_shopping_cart">Keranjang</string>
    <string name="message_need_to_select_gender">Silakan memilih gender</string>
    <string name="message_confirmation_logout">Apakah Anda ingin keluar ?</string>
    <string name="error_not_logged">Anda harus login untuk menggunakan fitur ini</string>
    <string name="title_forgot_password_1">Lupa kata sandi?</string>
    <string name="title_forgot_password_hint">Masukkan email login Anda dibawah ini. Kami akan mengirimkan pesan email beserta link untuk reset kata sandi Anda.</string>
    <string name="title_reset_password">Ganti Kata Sandi</string>
    <string name="title_reset_success">Kata sandi Anda akan diatur ulang</string>
    <string name="title_reset_success_hint_1">Sebuah email telah dikirim ke email kontak Anda dikaitkan dengan akun Anda,</string>
    <string name="title_reset_success_hint_2">Harap bersabar, pengiriman email dapat tertunda. \n
Ingatlah untuk mengkonfirmasi bahwa email di atas adalah benar dan periksa junk atau folder spam atau filter jika Anda tidak menerima email ini.</string>
    <string name="alert_on_email_edit_for_first_time">Proses pendaftaran akan lebih mudah jika menggunakan email yang ada di handphone ini.</string>
    <string name="alert_email_address_is_already_registered">Alamat email sudah terdaftar.</string>
    <string name="alert_check_your_internet_connection">Silakan periksa koneksi internet Anda</string>
    <string name="processing">Pengolahan...</string>
    <string name="title_activation_resent">Kirim Ulang Email Aktivasi</string>
    <string name="warning_check_activation_resent_1">Cek email kamu untuk aktivasi akun Tokopedia.\nKlik tombol kirim ulang jika kamu belum menerima email aktivasi.</string>
    <string name="warning_check_activation_resent_2">Pastikan untuk cek folder spam dan folder sampah sebelum melakukan kirim ulang email aktivasi.</string>
    <string name="welcome_text_1">Ini adalah aplikasi khusus untuk berjualan di Tokopedia.</string>
    <string name="welcome_text_2">Yuk mulai kelola tokomu di Tokopedia, mudah &amp; gratis!</string>
    <string name="account_registered_title">Akun Anda Sudah Pernah Terdaftar</string>
    <string name="account_registered_body">Anda sudah pernah melakukan pendaftaran akun tokopedia dengan email %1$s.\nSilakan login menggunakan akun anda atau klik disini untuk mengganti kata sandi anda.</string>
    <string name="account_registered_body_part">klik disini untuk mengganti kata sandi anda.</string>
    <string name="forgot_password_title">Kesulitan mengakses akun Anda?</string>
    <string name="forgot_password_body">Lupa kata sandi? Masukkan email login Anda di bawah ini. Kami akan mengirimkan pesan email beserta tautan untuk reset kata sandi anda.</string>
    <string name="title_change_phone_now">Masukkan nomor baru dan lakukan verifikasi! </string>
    <string name="title_verify_phone_now">Verifikasi nomor HP Anda!</string>
    <string name="hint_verification_code">Kode Verifikasi</string>
    <string name="button_verify">Verifikasi</string>
    <string name="button_continue">Lanjutkan</string>
    <string name="hint_account_password">Kata Sandi</string>
    <string name="link_change_phone">Ubah Nomor</string>
    <string name="title_old_number">Nomor Terdaftar</string>
    <string name="title_old_email">Email Terdaftar</string>
    <string name="title_new_desired_email">Masukkan Email Baru!</string>
    <string name="title_insert_new_phone_number">Masukkan Nomor Baru</string>
    <string name="title_send_verification_code">Request OTP</string>
    <string name="title_verification_timeout">Maaf, Telah terjadi masalah koneksi</string>
    <string name="message_verification_timeout">Silakan coba kembali</string>
    <string name="link_change_email">Ubah Email</string>
    <string name="error_phone_wrong_format">Nomor Telepon tidak benar</string>
    <string name="error_phone_too_long">Nomor Terlalu Panjang</string>
    <string name="error_download_provider">"Gagal mendownload provider"</string>
    <string name="string_change">Ubah</string>
    <string name="title_activity_add_product">Tambah Produk</string>
    <string name="title_activity_duplicate_product">Salin Produk</string>
    <string name="title_activity_edit_product">Ubah Produk</string>
    <string name="title_activity_draft_product">Draft Produk</string>
    <string name="submit_but">Simpan</string>
    <string name="submit_but2">Simpan dan Tambah </string>
    <string name="prompt_product_name">Nama Produk</string>
    <string name="prompt_catalog">Katalog</string>
    <string name="prompt_add_to">Tambah ke</string>
    <string name="prompt_condition">Kondisi</string>
    <string name="prompt_main_picture">Gambar Utama</string>
    <string name="hint_search_etalase">Cari Etalase</string>
    <string name="hint_search_status">Cari Status</string>
    <string name="error_change_primary_image">Tidak Dapat Mengubah Gambar Utama</string>
    <string name="error_delete_primary_image">Gambar Utama tidak dapat dihapus</string>
    <string name="error_failed_add_product">Anda Gagal Menambah Produk, Silakan Coba Lagi</string>
    <string name="dialog_payment_cancellation_confirmation">Apakah Anda yakin membatalkan transaksi ini?</string>
    <string name="dialog_payment_cancellation_confirmation_detil1">Jumlah Kupon yg diaktifkan : </string>
    <string name="dialog_payment_cancellation_confirmation_detil2">Daftar Kupon : </string>
    <string name="title_add_product">TAMBAH PRODUK</string>
    <string name="title_add_product_lowercase">Tambah Produk</string>
    <string name="title_diff_district">hanya dapat melayani pengiriman luar kota.</string>
    <string name="title_kg">Kg</string>
    <string name="error_weight_shipping">Berat barang harus lebih dari 1kg dan kurang dari 5kg</string>
    <string name="title_edit_prod">Ubah</string>
    <string name="title_copy_prod">Duplikat</string>
    <string name="title_edit_price">Ganti Harga</string>
    <string name="title_sort_but">Urutkan</string>
    <string name="title_filter_but">Filter</string>
    <string name="title_update_etalase">Ganti Etalase</string>
    <string name="title_update_categories">Ganti Kategori</string>
    <string name="title_update_insurance">Ganti Asuransi</string>
    <string name="title_delete">Hapus</string>
    <string name="action_edit">Ubah</string>
    <string name="title_currency_rp">Rp</string>
    <string name="title_cancel">Batal</string>
    <string name="option_move_trash">Hapus</string>
    <string name="option_move_inbox">Pindahkan ke Kotak Masuk</string>
    <string name="item_all">Semua</string>
    <string name="item_unread">Belum Dibaca</string>
    <string name="send">Kirim</string>
    <string name="title_additional_cost">Biaya Tambahan</string>
    <string name="title_status">Status</string>
    <string name="action_search">Cari</string>
    <string name="promote_0">TopAds</string>
    <string name="promote_1">Tingkatkan penjualan</string>
    <string name="promote_2">Toko dan produk Anda akan lebih mudah ditemukan oleh pengunjung Tokopedia</string>
    <string name="promote_3">Menjangkau dengan tepat</string>
    <string name="promote_4">TopAds membantu Anda menjangkau calon pembeli yang sesuai, melalui pencarian produk dan penelusuran kategori produk</string>
    <string name="promote_5">Efektif dan Efisien</string>
    <string name="promote_6">Dengan TopAds, hasil yang Anda harapkan sesuai dengan biaya yang Anda keluarkan</string>
    <string name="title_minimum_weight">Berat Minimum</string>
    <string name="title_awb">AWB</string>
    <string name="action_reset">Reset</string>
    <string name="mark_as_read">Tandai sudah dibaca</string>
    <string name="mark_as_unread">Tandai belum dibaca</string>
    <string name="hello_blank_name">Halo,®</string>
    <string name="title_complain_button">Komplain</string>
    <string name="string_complain_body">Apakah pesanan dari toko %s berkendala?\n\n\n1. Pilih \"Sudah Sampai\" bila barang sudah diterima\n\n2. Pilih \"Belum Sampai\" bila barang belum diterima </string>
    <string name="string_complain_button_receive">Sudah Sampai</string>
    <string name="string_complain_button_not_receive">Belum Sampai</string>
    <string name="string_complain_button_back">Kembali</string>
</resources>