<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- <item -->
    <!-- android:shopId="@+shopId/add_product" -->
    <!-- android:icon="@drawable/ic_plus_mini" -->
    <!-- android:showAsAction="always" -->
    <!-- android:title="@string/action_settings"/> -->

    <item
        android:id="@+id/manage_search"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_new_action_search"
        app:showAsAction="always"
        android:title="@string/title_add_product"/>
    <item
        android:id="@+id/add_product"
        android:icon="@drawable/ic_new_action_plus"
        app:showAsAction="never"
        android:title="@string/title_add_product_lowercase"/>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_new_action_plus"
        app:showAsAction="never"
        android:title="@string/title_sort_but"/>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_new_action_plus"
        app:showAsAction="never"
        android:title="@string/title_filter_but"/>

</menu>