<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_small"
    android:background="@drawable/background_ads"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vs"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_icon_toped_announce"
            android:layout_marginRight="@dimen/margin_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/green_btn"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:text="@string/promote_0"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="@dimen/margin_vs"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:text="@string/promote_1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/padding_vs"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:lineSpacingMultiplier="0.9"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/promote_2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="@dimen/margin_vs"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:text="@string/promote_3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:paddingBottom="@dimen/padding_vs"
        android:lineSpacingMultiplier="0.9"
        android:text="@string/promote_4"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="@dimen/margin_vs"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:text="@string/promote_5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_vs"
        android:lineSpacingExtra="@dimen/margin_vs"
        android:lineSpacingMultiplier="0.9"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/promote_6"
        />
    <TextView
        android:id="@+id/readMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Baca selengkapnya"
        android:textColor="@color/white"
        android:background="@drawable/button_buy_from_cart"
        android:gravity="center"
        android:layout_margin="@dimen/margin_small"/>
</LinearLayout>
