<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_dialog_view"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:background="@drawable/btn_plain"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">
        <TextView
            android:id="@+id/maximum_additional_cost_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:background="@drawable/bg_yellow_border_yelow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:text="@string/title_additional_cost"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/additional_cost_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_currency_rp"/>
            <EditText
                android:id="@+id/additional_cost_holder"
                android:layout_width="@dimen/store_name"
                android:layout_height="@dimen/btn_height"
                android:digits="1234567890"
                android:maxLength="8"
                android:inputType="phone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minimum_weight_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_weight_shipping"
            android:background="@drawable/bg_yellow_border_yelow"
            android:padding="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_minimum_weight"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/minimum_weight_holder"
                android:layout_width="@dimen/store_name"
                android:layout_height="@dimen/btn_height"
                android:digits="1234567890"
                android:maxLength="3"
                android:inputType="phone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_kg"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/additional_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <CheckBox
            android:id="@+id/awb_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_awb"/>
        <CheckBox
            android:id="@+id/diff_district_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_diff_district"
            android:layout_below="@id/awb_checkbox"/>
        <ImageView
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/info_icon"
            android:layout_toRightOf="@id/awb_checkbox"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/cancel_courier_change"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_plain">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cancel"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/accept_courier_change"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_plain">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_edit"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>