<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cards_ui_flat"
    android:gravity="center"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/title_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/title_filter_but"
        android:gravity="center"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/title_filter"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_status"/>

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:textSize="@dimen/fonts" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:checked="true"
                android:text="@string/item_all"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/radio_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_unread"
                android:textSize="@dimen/sp_14" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/spinner_layout"
        android:layout_marginTop="@dimen/margin_small"

        android:background="@color/teal_300"
        android:minHeight="32dp"
        android:text="@string/action_search" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_layout"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toLeftOf="@id/button_confirm"
        android:layout_toStartOf="@id/button_confirm"
        android:background="@color/grey_300"
        android:minHeight="32dp"
        android:text="@string/action_reset" />

</RelativeLayout>