<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_med">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_name"
        android:textSize="@dimen/fontxl"
        android:textStyle="bold"
        android:textColor="@color/body_text_5_inverse"
        android:layout_marginBottom="@dimen/margin_small" />

    <TextView
        android:id="@+id/body"
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_check_activation_resent_1"
        android:layout_marginTop="@dimen/margin_vs"
        android:layout_marginBottom="@dimen/margin_vs"
        android:textSize="@dimen/text_size_medium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper"
        android:layout_below="@id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="Email">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeActionId="@+id/email"
            android:imeActionLabel="@string/send"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_below="@id/wrapper"
        android:id="@+id/resend_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        android:background="@color/deep_orange_500"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_activation_resent"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resend_button"
        android:layout_marginTop="@dimen/margin_med"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:text="@string/warning_check_activation_resent_2"/>

</RelativeLayout>