<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_med"
        android:text="@string/dialog_payment_cancellation_confirmation"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/voucher_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vs"
        android:text="@string/dialog_payment_cancellation_confirmation_detil1"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vs"
        android:text="@string/dialog_payment_cancellation_confirmation_detil2"
        android:textSize="@dimen/sp_14" />

    <ListView
        android:id="@+id/voucher_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>